--- a/lectures/Week09new_files/8-outputs.Rmd
+++ b/lectures/Week09new_files/8-outputs.Rmd
@@ -1,9 +1,13 @@
 ---
 title: "Viridis Demo 2"
-output: 
+output:
+  word_document:
+    toc: yes
   html_document:
-    toc: true
-    toc_float: true
+    toc: yes
+    toc_float: yes
+  pdf_document:
+    toc: yes
 ---
 
 ```{r include = FALSE}
